# emby-dl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  opencode.json
.github/workflows/: release.yml
Formula/: emby-dl.rb
bucket/: emby-dl.json
scoop/: emby-dl.json
src/: db.rs  main.rs
src/api/: auth.rs  client.rs  items.rs  mod.rs  stream.rs
src/download/: direct.rs  mod.rs
src/utils/: filename.rs  mod.rs  progress.rs
