[package]
name = "emby-dl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream", "brotli", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
anyhow = "1"
futures-util = "0.3"
rusqlite = { version = "0.40", features = ["bundled"] }
aes-gcm = "0.11"
getrandom = { version = "0.4", features = ["std"] }
